--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
+          </li>
         </ul>
       </div>
     </nav>
