--- a/projects.html
+++ b/projects.html
@@ -40,11 +40,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
-        <!-- Content specific to the Projects page -->
+        <div style="text-align: center">  
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="6847dcfa-e2e2-4e03-8773-487dafa5f6f4" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async="" src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="1a68afc8-1fff-45d0-b67a-ff1a7245f901" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async="" src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="877fdd1f-4c4e-41de-b37d-432ad5ad1eda" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async="" src="//cdn.credly.com/assets/utilities/embed.js"></script>
+
       </div>
     </section>
   </div>
 
+
+</div>
   <!-- Scripts -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
